FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
more details.

You should have received a copy of the GNU General Public License along
with this program; if not, write to the Free Software Foundation, Inc.,
59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
------------------------------------------------------------------------------------
CHANGELOG file
v1.110414
	BUG.		UTF-8 char testing needs to cast unsigned char before doing logic.
v1.110413
	BUG.		Mantis #70. Errors not listing full set of available fn operations.
	Enh.		NOT all strobject are utf-8 strings. Added an internal kind:di_raw 
v1.110412
	BUG.		NOT all strobject are utf-8 strings. (was not resolved)
v1.110411
	BUG.		'significant' comparates not being tested after eval. 
	BUG.		fields always being transcoded.
v1.110408
	BUG.		url significant should return true or false.
v1.110407
	Enh.		Added a u_str dataitem. Moved transcode to be inside Manager.
v1.110404
	BUG.		Mantis #69. With thrown errors, adjacent outputs are set.
v1.110331
	Tidy		Attempting to refactor IKO to allow objects within any space to handle xpaths.
v1.110315
	BUG.		Error not thrown when space=none, or output space=immediate are value-holding.
v1.110223
	Enh.		xpath attribute is now available for iko. Currently this only effects stores.
	BUG.		when space and context are the same, existence/significance tests are being run on context AND space.
v1.110221
    BUG.		300,301,303 were missing http responses.
v1.110216
	BUG.
Fixed stack size for syslogs error reports
v1.110214
	Enh.		OBYX_DEFAULT_VERSION.
v1.110209
	BUG.		branch store writing limited to this scope when xpath is not empty.
v1.110208       <----- From this version on, files expect old comparison 'scope' to be called 'logic' 
					   Also stores belong to the document they are declared in, with the scope attribute being used.
					   Before this point, stores are all global.
	Enh.		Stores now have branch scope by default.